--- a/library-spring-data-mongo-mvc-view/src/main/resources/templates/editComment.html
+++ b/library-spring-data-mongo-mvc-view/src/main/resources/templates/editComment.html
@@ -6,15 +6,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
-<div class="container-xxl" th:if="!${comment.book.id}">
-    <h3>Книга не найдена</h3>
-    <p><a th:href="@{/book}">К списку книг</a></p>
-</div>
-<div class="container-xxl" th:if="${comment.book.id}">
+<div class="container-xxl">
     <form id="save-form" th:method="post" th:action="@{/comment/save}" th:object="${comment}">
 
-        <h3>Изменить комментарий к книге:</h3>
+        <h3>Комментарий к книге:</h3>
         <input type="text" th:field="*{id}" class="form-control" hidden="hidden"/>
         <input type="text" th:field="*{book}" class="form-control" hidden="hidden"/>
         <table class="table table-hover">
@@ -41,6 +38,7 @@
         <button type="submit">Сохранить</button>
     </form>
     <p><a th:href="@{/book/{id}(id=${comment.book.id})}">Назад в книгу</a></p>
+    <p><a th:href="@{/}">Домой</a></p>
 </div>
 
 </body>
